@startuml
'https://plantuml.com/class-diagram
abstract class Employee {
    -String firstName
    -String lastName
    -String socialSecurityNumber

    +String getFirstName()
    +void setFirstName(String firstName)
    +String getLastName()
    +void setLastName(String lastName)
    +String getSocialSecurityNumber()
    +void setSocialSecurityNumber(String socialSecurityNumber)
    +String toString()
}

Employee <|-- HourlyEmployee
Employee <|-- CommisionEmployee
Employee <|-- SalariedEmployee
Employee <|-- BaseEmployee

class SalariedEmployee {
    ~int weeklySalary
    +int getWeeklySalary()
    +void setWeeklySalary(int weeklySalary
    +public String toString()
}

class HourlyEmployee {
    ~int wage
    ~int hoursWorked
    +int getWage()
    +setWage(int wage)
    +int getHoursWorked()
    +void setHoursWorked(int hoursWorked)
    +String toString()
}

class CommisionEmployee {
    ~int commissionRate
    ~int grossSales
    +int getCommissionRate()
    +void setCommissionRate(int commissionRate)
    +int getGrossSales()
    +void setGrossSales(int grossSales)
    +String toString()
}

class BaseEmployee {
    ~int baseSalary
    +int getBaseSalary()
    +void setBaseSalary(int baseSalary)
}

class Driver{
    +void {static} main(String[] args)
}

@enduml